# Brick-Breaker

./: CMakeLists.txt  README.md  main.cpp
Inc/: BrickGameClass.h  CMakeLists.txt  RenderEngine2D.h  Texture.h  gameLevel.h
Levels/: level1.txt  level5.txt
Resources/shaders/: basic_vert.glsl  char_vert.glsl  particle_frag.glsl  particle_vert.glsl  screens_vert.glsl
Src/: BrickGameClass.cpp  CMakeLists.txt  Camera.cpp  RenderEngine2D.cpp  Shader.cpp  Texture.cpp  gameLevel.cpp
freetype-cmake/: CMakeLists.txt  README
